precompiles/utils/macro/tests/precompile/compile-fail/evm-data/output-not-result.stderr
error[E0277]: the `?` operator can only be applied to values that implement `Try`
  --> tests/precompile/compile-fail/evm-data/output-not-result.rs:22:46
   |
22 |     fn foo(test: &mut impl PrecompileHandle) -> String {
   |                                                 ^^^^^^ the `?` operator cannot be applied to type `String`
   |
   = help: the trait `Try` is not implemented for `String`
